fixed fieldset alignment

--- a/pages/index.css
+++ b/pages/index.css
@@ -180,7 +180,9 @@
 }
 
 .form__fieldset {
-  width: 385px;
+  display: flex;
+  flex-direction: column;
+  max-width: 385px;
   border: none;
   padding: 0;
 }
@@ -198,13 +200,21 @@
 
 .form__input {
   border-radius: 4px;
+  border-color: #838383;
   margin-bottom: 32px;
   font-size: 20px;
   line-height: 30px;
   color: #000;
-  width: 100%;
   height: 60px;
-  text-indent: 16px;
+  text-indent: 18px;
+}
+
+.form__input::placeholder {
+  color: #838383;
+}
+
+.form__input[type="datetime-local"] {
+  text-indent: 10px;
 }
 
 .form__button {
